== HEAD
  * Minor Enhancements
    * Use OptionParser's [no-] functionality for better boolean parsing.
    * Add Drupal migrator (#245)
    * Complain about YAML and Liquid errors (#249)
    * Remove orphaned files during regeneration (#247)

== 0.8.0 / 2010-11-22
  * Minor Enhancements
    * Add wordpress.com importer (#207)
    * Add --limit-posts cli option (#212)
    * Add uri_escape filter (#234)
    * Add --base-url cli option (#235)
    * Improve MT migrator (#238)
    * Add kramdown support (#239)
  * Bug Fixes
    * Fixed filename basename generation (#208)
    * Set mode to UTF8 on Sequel connections (#237)
    * Prevent _includes dir from being a symlink

== 0.7.0 / 2010-08-24
  * Minor Enhancements
    * Add support for rdiscount extensions (#173)
  * Bug Fixes
    * Highlight should not be able to render local files
    * The site configuration may not always provide a 'time' setting (#184)

== 0.6.2 / 2010-06-25
  * Bug Fixes
    * Fix Rakefile 'release' task (tag pushing was missing origin)
    * Ensure that RedCloth is loaded when textilize filter is used (#183)
    * Expand source, destination, and plugin paths (#180)
    * Fix page.url to include full relative path (#181)

== 0.6.1 / 2010-06-24
  * Bug Fixes
    * Fix Markdown Pygments prefix and suffix (#178)

== 0.6.0 / 2010-06-23
  * Major Enhancements
    * Proper plugin system (#19, #100)
    * Add safe mode so unsafe converters/generators can be added
    * Maruku is now the only processor dependency installed by default.
      Other processors will be lazy-loaded when necessary (and prompt the
      user to install them when necessary) (#57)
  * Minor Enhancements
    * Inclusion/exclusion of future dated posts (#59)
    * Generation for a specific time (#59)
    * Allocate site.time on render not per site_payload invocation (#59)
    * Pages now present in the site payload and can be used through the
      site.pages and site.html_pages variables